[package]
name = "constgrid"
version = "0.1.0"
authors = ["Adam Chalmers <adam.s.chalmers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1"

[dev-dependencies.criterion]
version = "0.3"
features = ["html_reports"]

[[bench]]
name = "my_benchmark"
harness = false